# haskell-openai

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  cabal.project.freeze  haskell-gpt3.cabal  haskell-openai.cabal
gpt3-types/: CHANGELOG.md  gpt3-types.cabal
gpt3-types/src/GPT3/Types/OpenAI/: Request.hs
gpt3-types/test/: Main.hs
gpt3-types/test/GPT3/Types/OpenAI/: RequestTest.hs
openai-api/: CHANGELOG.md  LICENSE  README.md  openai-api.cabal
openai-api-examples/: CHANGELOG.md  LICENSE  openai-api-examples.cabal
openai-api-examples/app/: Main.hs
openai-api/src/OpenAI/API/V1/Common/: Configuration.hs  Const.hs
openai-api/src/OpenAI/API/V1/Completion/: Client.hs
openai-api/src/OpenAI/API/V1/Edit/: Client.hs  Code.hs  Text.hs
openai-api/src/OpenAI/API/V1/Image/: Client.hs
openai-api/src/OpenAI/API/V1/Model/: Client.hs
openai-api/src/OpenAI/API/V1/Util/: EditUtil.hs  FileUtil.hs
openai-api/src/OpenAI/API/V1/Util/Completion/: ChoiceUtil.hs  ResponseUtil.hs
openai-api/test/: Main.hs
openai-labs/: CHANGELOG.md  LICENSE  openai-labs.cabal
openai-labs/app/: ChatGPT3.hs  Main.hs  WorkHelper.hs
openai-labs/src/OpenAI/API/V1/Chat/ChatGPT3/: Chat.hs  Helper.hs  Instruction.hs  README.md  WorkHelper.hs
openai-types/: .gitignore  CHANGELOG.md  openai-types.cabal
openai-types/src/OpenAI/API/V1/Common/: Helper.hs  Usage.hs
openai-types/src/OpenAI/API/V1/Completion/: Choice.hs  Request.hs  Response.hs  Usage.hs
openai-types/src/OpenAI/API/V1/Configuration/: Configuration.hs
openai-types/src/OpenAI/API/V1/Edit/: Choice.hs  Request.hs  Response.hs
openai-types/src/OpenAI/API/V1/Image/: ImageData.hs  Request.hs  Response.hs
openai-types/src/OpenAI/API/V1/Image/Edit/: Request.hs
openai-types/src/OpenAI/API/V1/Image/Variation/: Request.hs
openai-types/src/OpenAI/API/V1/Model/: Model.hs  Permission.hs  Response.hs
openai-types/src/OpenAI/Types/: Choice.hs  Request.hs  Response.hs  Usage.hs
openai-types/test/: Main.hs
openai-types/test/OpenAI/API/V1/Common/: UsageTest.hs
openai-types/test/OpenAI/API/V1/Completion/: ChoiceTest.hs  RequestTest.hs  ResponseTest.hs  UsageTest.hs
openai-types/test/OpenAI/API/V1/Edit/: ChoiceTest.hs  RequestTest.hs  ResponseTest.hs
openai-types/test/OpenAI/Types/: ChoiceTest.hs  RequestTest.hs  ResponseTest.hs  UsageTest.hs
