cabal-version:      2.4
name:               openai-api-examples
version:            0.1.0.0
synopsis:           OpenAI Haskell samples implementation.

-- A longer description of the package.
-- description:
homepage:
    https://github.com/braejan/haskell-openai/tree/main/openai-api-examples

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Braejan Arias
maintainer:         ing.brayanarias@gmail.com

-- A copyright notice.
-- copyright:
category:           Web
extra-source-files: CHANGELOG.md

executable openai-api-examples
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
      base ^>=4.16.4.0,
      openai-types,
      openai-api,
      text,
      aeson,
    hs-source-dirs:   app
    default-language: Haskell2010
