cabal-version:      2.4
name:               openai-labs
version:            0.1.0.0
synopsis:           Just a home labs compilations ðŸ˜

-- A longer description of the package.
-- description:
homepage:
    https://github.com/braejan/haskell-openai/tree/main/openai-labs

-- A URL where users can report bugs.
-- bug-reports:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Braejan Arias
maintainer:         ing.brayanarias@gmail.com

-- A copyright notice.
-- copyright:
category:           AI
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        OpenAI.API.V1.Chat.ChatGPT3.Chat
        OpenAI.API.V1.Chat.ChatGPT3.Instruction

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        text,
        openai-api,
        openai-types,
    hs-source-dirs:   src
    default-language: Haskell2010

executable openai-labs
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        random,
        text,
        openai-types,
        openai-api,
        openai-labs,

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite openai-labs-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    base ^>=4.16.4.0
